feat: introduced endpoint to search address
